third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/repr_unsupported.stderr
error: C++ does not support custom alignment on an enum
 --> tests/ui/repr_unsupported.rs:3:18
  |
3 |     #[repr(align(2))]
  |                  ^

error: unsupported alignment on a struct
 --> tests/ui/repr_unsupported.rs:8:12
  |
8 |     #[repr(i64)]
  |            ^^^

error: invalid repr(align) attribute: an arithmetic expression is not supported
  --> tests/ui/repr_unsupported.rs:13:18
   |
13 |     #[repr(align(1 << 10))]
   |                  ^^^^^^^
